--- a/css/styles.css
+++ b/css/styles.css
@@ -35,14 +35,14 @@ body {
 }
 
 .form input {
-    padding: .8rem;
+    padding: 0.8rem;
     border: none;
     flex: 1;
     border-radius: 4px;
 }
 
 .form button {
-    padding: 8rem;
+    padding: .8rem;
     min-width: 50px;
     margin-left: 8px;
     background-color: #8dd0f5;
@@ -51,4 +51,19 @@ body {
     border-radius: 4px;
     cursor: pointer;
 
+}
+
+/* clima */
+#weather-data {
+    border-top: 1px solid #fff;
+    margin-top: 1.5rem;
+    padding-top: 1.5rem;
+    text-align: center;
+}
+
+#weather-data h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0.6rem;
 }
