--- a/css/styles.css
+++ b/css/styles.css
@@ -67,3 +67,34 @@ body {
     align-items: center;
     margin-bottom: 0.6rem;
 }
+
+#weather-data h2 i {
+    font-size: 1rem;
+}
+
+#weather-data span {
+    margin: 0.6rem;
+}
+
+#country {
+    height: 15px;
+}
+
+#description-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: .6rem 0;
+}
+
+#details-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#details-container #umididy {
+    border-right: 1px solid #fff;
+    margin: .6rem;
+    padding: .6rem;
+}
