projeto finalizado commit

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,7 @@
 
 
 body {
-  background: url("/assets/img/bg-weather.jpg");
+  background: url("../img/bg-weather.jpg");
   background-position: center;
   background-size: cover;
   display: flex;
